trunk/BlazonGrammar/src/blazon/server/grammar/BlazonParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 C:\\Users\\Luke\\Dropbox\\project\\workspace2\\BlazonGrammar\\grammar\\Blazon.g 2012-03-14 17:54:06

package blazon.server.grammar;
import blazon.shared.shield.*;
import blazon.shared.shield.charges.*;
import blazon.shared.shield.ShieldDivision.ShieldDivisionType;
import blazon.shared.shield.diagnostic.ShieldDiagnostic;
import blazon.shared.shield.diagnostic.ShieldDiagnostic.LogLevel;
import blazon.shared.shield.tinctures.*;
import blazon.shared.numberconversion.WordToNumberConverter;

import java.util.Map;
import java.util.HashMap;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class BlazonParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DETERMINER", "ORDINARY_DIV", "OTHER_ORDINARY", "SUBORDINARY_DIV", "SUBORDINARY", "MODIFIER", "SUBORDINARY_MULTIPLE", "MOBILE_CHARGE", "BEAST", "WINGED_BEAST", "ATTITUDE", "BIRD_FLYING_INSECT", "FLYING_ATTITUDE", "SWIMMING_BEAST", "SWIMMING_ATTITUDE", "ATTITUDE_MODIFIER", "BODY_PART", "AND", "TIERCED", "PARTYPER", "VARIABLE_DIV", "OF", "CONTINUOUS_DIV", "QUARTER", "COLOUR", "METAL", "FUR", "PROPER", "DIGITS", "NUMWORDS", "WS", "'plain'"
    };
    public static final int EOF=-1;
    public static final int T__35=35;
    public static final int DETERMINER=4;
    public static final int ORDINARY_DIV=5;
    public static final int OTHER_ORDINARY=6;
    public static final int SUBORDINARY_DIV=7;
    public static final int SUBORDINARY=8;
    public static final int MODIFIER=9;
    public static final int SUBORDINARY_MULTIPLE=10;
    public static final int MOBILE_CHARGE=11;
    public static final int BEAST=12;
    public static final int WINGED_BEAST=13;
    public static final int ATTITUDE=14;
    public static final int BIRD_FLYING_INSECT=15;
    public static final int FLYING_ATTITUDE=16;
    public static final int SWIMMING_BEAST=17;
    public static final int SWIMMING_ATTITUDE=18;
    public static final int ATTITUDE_MODIFIER=19;
    public static final int BODY_PART=20;
    public static final int AND=21;
    public static final int TIERCED=22;
    public static final int PARTYPER=23;
    public static final int VARIABLE_DIV=24;
    public static final int OF=25;
    public static final int CONTINUOUS_DIV=26;
    public static final int QUARTER=27;
    public static final int COLOUR=28;
    public static final int METAL=29;
    public static final int FUR=30;
    public static final int PROPER=31;
    public static final int DIGITS=32;
    public static final int NUMWORDS=33;
    public static final int WS=34;

    // delegates
    // delegators


        public BlazonParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public BlazonParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return BlazonParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Luke\\Dropbox\\project\\workspace2\\BlazonGrammar\\grammar\\Blazon.g"; }


    public BlazonParser(TokenStream input, List<ShieldDiagnostic> diags) {
    	this(input, new RecognizerSharedState(), diags);
    }

    public BlazonParser(TokenStream input, RecognizerSharedState state,
    		List<ShieldDiagnostic> diags) {
    	super(input, state);
    	this.diags = diags;
    }

    private WordToNumberConverter converter = new WordToNumberConverter();
    private List<ShieldDiagnostic> diags;

    private void diagnoseRuleOfTincture(Tincture t,
    		TinctureType underLayerTinctureType) {
    	TinctureType thisTinctureType = t.getTinctureType();
    	if (underLayerTinctureType == thisTinctureType) {
    		if (thisTinctureType == TinctureType.COLOUR
    				|| thisTinctureType == TinctureType.METAL) {
    			diags.add(ShieldDiagnostic
    					.build(LogLevel.WARNING,
    							"You are not obeying the rule of tincture. You can not put a colour on a colour, or a metal on a metal"));
    		}
    	}
    }

    private String checkForPlurals(String text, int number) {
      if (number > 1) {
        if (!text.endsWith("s")) {
          diags.add(ShieldDiagnostic.build(LogLevel.WARNING, 
              "You have specified that there is more than one of a charge, but not used the plural. Changing '"
               + text + "' to '" + text + "s'."));
        } else {
          text = text.substring(0, text.length() - 1);
        }
      } else if (number == 1) {
        if (text.endsWith("s")) {
          text = text.substring(0, text.length() - 1);
          diags.add(ShieldDiagnostic.build(LogLevel.WARNING,
              "You have specified that there is only one of a charge, but used the plural. Changing '"
               + text + "s' to '" + text + "'."));
        }
      }
      return text;
    }

    private boolean startsWithAVowel(String word) {
      return word.startsWith("a") || word.startsWith("e") || word.startsWith("i") || word.startsWith("o") || word.startsWith("u");
    }

    private int convertNumber(String numberWords) throws RecognitionException {
    	try {
    		if (numberWords.equals("a") || numberWords.equals("an")) {
    			return 1;
    		}
    		return converter.convert(numberWords);
    	} catch (Exception e) {
    		diags.add(ShieldDiagnostic.build(LogLevel.ERROR, "Unable to convert '"
    				+ numberWords + "' into an integer. Caught: " + e));
    		throw new RecognitionException(this.input);
    	}
    }

    @Override
    public void emitErrorMessage(String msg) {
    	diags.add(ShieldDiagnostic.build(LogLevel.ERROR, msg));
    }

    protected void mismatch(IntStream input, int ttype, BitSet follow)
    		throws RecognitionException {
    	throw new MismatchedTokenException(ttype, input);
    }

    public Object recoverFromMismatchedSet(IntStream input, RecognitionException e, BitSet follow) throws RecognitionException {
    	throw e;
    }



    // $ANTLR start "shield"
    // C:\\Users\\Luke\\Dropbox\\project\\workspace2\\BlazonGrammar\\grammar\\Blazon.g:154:1: shield returns [Shield s] : field ( charges[$field.field.getTinctureTypeOfLayer()] )* ;
    public final Shield shield() throws RecognitionException {
        Shield s = null;

        Field field1 = null;

        List<Charge> charges2 = null;


        try {
            // C:\\Users\\Luke\\Dropbox\\project\\workspace2\\BlazonGrammar\\grammar\\Blazon.g:155:3: ( field ( charges[$field.field.getTinctureTypeOfLayer()] )* )
            // C:\\Users\\Luke\\Dropbox\\project\\workspace2\\BlazonGrammar\\grammar\\Blazon.g:156:3: field ( charges[$field.field.getTinctureTypeOfLayer()] )*
            {

                String blazon = input.toString();
              
            pushFollow(FOLLOW_field_in_shield73);
            field1=field();

            state._fsp--;


                s = ShieldImpl.build(field1, blazon);
              
            // C:\\Users\\Luke\\Dropbox\\project\\workspace2\\BlazonGrammar\\grammar\\Blazon.g:162:3: ( charges[$field.field.getTinctureTypeOfLayer()] )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==DETERMINER||(LA1_0>=DIGITS && LA1_0<=NUMWORDS)) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // C:\\Users\\Luke\\Dropbox\\project\\workspace2\\BlazonGrammar\\grammar\\Blazon.g:163:5: charges[$field.field.getTinctureTypeOfLayer()]
            	    {
            	    pushFollow(FOLLOW_charges_in_shield85);
            	    charges2=charges(field1.getTinctureTypeOfLayer());

            	    state._fsp--;


            	          s.addCharges(charges2);
            	        

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


                s.addDiagnostics(diags);
              

            }

        }
        catch (RecognitionException e) {

              displayRecognitionError(this.getTokenNames(), e);
              return InvalidShield.build(diags);

        }
        finally {
        }
        return s;
    }
    // $ANTLR end "shield"


    // $ANTLR start "field"
    // C:\\Users\\Luke\\Dropbox\\project\\workspace2\\BlazonGrammar\\grammar\\Blazon.g:175:1: field returns [Field field] : ( div some_tinctures[tinctures, division] | tincture[tinctures] ( 'plain' )? ) ;
    public final Field field() throws RecognitionException {
        Field field = null;

        ShieldDivisionType div3 = null;

        Field some_tinctures4 = null;


        try {
            // C:\\Users\\Luke\\Dropbox\\project\\workspace2\\BlazonGrammar\\grammar\\Blazon.g:176:3: ( ( div some_tinctures[tinctures, division] | tincture[tinctures] ( 'plain' )? ) )
            // C:\\Users\\Luke\\Dropbox\\project\\workspace2\\BlazonGrammar\\grammar\\Blazon.g:177:3: ( div some_tinctures[tinctures, division] | tincture[tinctures] ( 'plain' )? )
            {

                Tinctures tinctures = new Tinctures();
              
            // C:\\Users\\Luke\\Dropbox\\project\\workspace2\\BlazonGrammar\\grammar\\Blazon.g:180:3: ( div some_tinctures[tinctures, division] | tincture[tinctures] ( 'plain' )? )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( ((LA3_0>=TIERCED && LA3_0<=VARIABLE_DIV)||(LA3_0>=CONTINUOUS_DIV && LA3_0<=QUARTER)) ) {
                alt3=1;
            }
            else if ( ((LA3_0>=COLOUR && LA3_0<=PROPER)) ) {
                alt3=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // C:\\Users\\Luke\\Dropbox\\project\\workspace2\\BlazonGrammar\\grammar\\Blazon.g:181:5: div some_tinctures[tinctures, division]
                    {
                    pushFollow(FOLLOW_div_in_field130);
                    div3=div();

                    state._fsp--;


                          ShieldDivisionType division = div3;
                        
                    pushFollow(FOLLOW_some_tinctures_in_field138);
                    some_tinctures4=some_tinctures(tinctures, division);

                    state._fsp--;


                          field = some_tinctures4;
                        

                    }
                    break;
                case 2 :
                    // C:\\Users\\Luke\\Dropbox\\project\\workspace2\\BlazonGrammar\\grammar\\Blazon.g:188:5: tincture[tinctures] ( 'plain' )?
                    {
                    pushFollow(FOLLOW_tincture_in_field151);
                    tincture(tinctures);

                    state._fsp--;

                    // C:\\Users\\Luke\\Dropbox\\project\\workspace2\\BlazonGrammar\\grammar\\Blazon.g:188:25: ( 'plain' )?
                    int alt2=2;
                    int LA2_0 = input.LA(1);

                    if ( (LA2_0==35) ) {
                        alt2=1;
                    }
                    switch (alt2) {
                        case 1 :
                            // C:\\Users\\Luke\\Dropbox\\project\\workspace2\\BlazonGrammar\\grammar\\Blazon.g:188:25: 'plain'
                            {
                            match(input,35,FOLLOW_35_in_field154); 

                            }
                            break;

                    }


                    	    field = Field.buildUndividedShieldLayer(tinctures);
                    	  

                    }
                    break;

            }


            }

        }

        catch (RecognitionException re) {
                throw re;
            }
        finally {
        }
        return field;
    }
    // $ANTLR end "field"


    // $ANTLR start "charges"
    // C:\\Users\\Luke\\Dropbox\\project\\workspace2\\BlazonGrammar\\grammar\\Blazon.g:193:1: charges[TinctureType underLayerTinctureType] returns [List<Charge> charges] : ( DETERMINER single_geometric_charge[tinctures, underLayerTinctureType] | geometricCount= number_digits_or_words multiple_geometric_charges[tinctures, underLayerTinctureType, convertNumber($geometricCount.text)] | advancedCount= number_digits_or_words advanced_charge[tinctures, underLayerTinctureType, convertNumber($advancedCount.text)] ) ;
    public final List<Charge> charges(TinctureType underLayerTinctureType) throws RecognitionException {
        List<Charge> charges = null;

        Token DETERMINER6=null;
        BlazonParser.number_digits_or_words_return geometricCount = null;

        BlazonParser.number_digits_or_words_return advancedCount = null;

        GeometricCharge single_geometric_charge5 = null;

        List <Charge> multiple_geometric_charges7 = null;

        List <Charge> advanced_charge8 = null;


        try {
            // C:\\Users\\Luke\\Dropbox\\project\\workspace2\\BlazonGrammar\\grammar\\Blazon.g:194:3: ( ( DETERMINER single_geometric_charge[tinctures, underLayerTinctureType] | geometricCount= number_digits_or_words multiple_geometric_charges[tinctures, underLayerTinctureType, convertNumber($geometricCount.text)] | advancedCount= number_digits_or_words advanced_charge[tinctures, underLayerTinctureType, convertNumber($advancedCount.text)] ) )
            // C:\\Users\\Luke\\Dropbox\\project\\workspace2\\BlazonGrammar\\grammar\\Blazon.g:195:3: ( DETERMINER single_geometric_charge[tinctures, underLayerTinctureType] | geometricCount= number_digits_or_words multiple_geometric_charges[tinctures, underLayerTinctureType, convertNumber($geometricCount.text)] | advancedCount= number_digits_or_words advanced_charge[tinctures, underLayerTinctureType, convertNumber($advancedCount.text)] )
            {

                Tinctures tinctures = new Tinctures();
                charges = new ArrayList<Charge>();
              
            // C:\\Users\\Luke\\Dropbox\\project\\workspace2\\BlazonGrammar\\grammar\\Blazon.g:199:3: ( DETERMINER single_geometric_charge[tinctures, underLayerTinctureType] | geometricCount= number_digits_or_words multiple_geometric_charges[tinctures, underLayerTinctureType, convertNumber($geometricCount.text)] | advancedCount= number_digits_or_words advanced_charge[tinctures, underLayerTinctureType, convertNumber($advancedCount.text)] )
            int alt4=3;
            alt4 = dfa4.predict(input);
            switch (alt4) {
                case 1 :
                    // C:\\Users\\Luke\\Dropbox\\project\\workspace2\\BlazonGrammar\\grammar\\Blazon.g:200:5: DETERMINER single_geometric_charge[tinctures, underLayerTinctureType]
                    {
                    DETERMINER6=(Token)match(input,DETERMINER,FOLLOW_DETERMINER_in_charges188); 
                    pushFollow(FOLLOW_single_geometric_charge_in_charges190);
                    single_geometric_charge5=single_geometric_charge(tinctures, underLayerTinctureType);

                    state._fsp--;


                          if (single_geometric_charge5 != null) {
                    			  charges.add(single_geometric_charge5);
                    				if ("a".equals((DETERMINER6!=null?DETERMINER6.getText():null))) {
                    					String chargeName = single_geometric_charge5.getName().toString().toLowerCase();
                    					if (startsWithAVowel(chargeName)) {
                    						diags.add(ShieldDiagnostic.build(LogLevel.WARNING,
                    										"You have asked for the charge '" + (DETERMINER6!=null?DETERMINER6.getText():null) + " " + chargeName
                    												+ "'. A charge starting with a vowel should be preceded by 'an' i.e. 'an "
                    												+ chargeName + "'."));
                    					}
                    				} else if ("an".equals((DETERMINER6!=null?DETERMINER6.getText():null))) {
                    					String chargeName = single_geometric_charge5.getName().toString().toLowerCase();
                    					if (!startsWithAVowel(chargeName)) {
                    						diags.add(ShieldDiagnostic.build(LogLevel.WARNING,
                    										"You have asked for the charge '" + (DETERMINER6!=null?DETERMINER6.getText():null) + " " + chargeName
                    											  + "'. A charge starting with a consonants should be preceded by 'a' i.e. 'a "
                    												+ chargeName + "'."));
                    					}
                    	     }
                         }
                       

                    }
                    break;
                case 2 :
                    // C:\\Users\\Luke\\Dropbox\\project\\workspace2\\BlazonGrammar\\grammar\\Blazon.g:222:4: geometricCount= number_digits_or_words multiple_geometric_charges[tinctures, underLayerTinctureType, convertNumber($geometricCount.text)]
                    {
                    pushFollow(FOLLOW_number_digits_or_words_in_charges200);
                    geometricCount=number_digits_or_words();

                    state._fsp--;

                    pushFollow(FOLLOW_multiple_geometric_charges_in_charges202);
                    multiple_geometric_charges7=multiple_geometric_charges(tinctures, underLayerTinctureType, convertNumber((geometricCount!=null?input.toString(geometricCount.start,geometricCount.stop):null)));

                    state._fsp--;


                         if (multiple_geometric_charges7 != null) {
                    	     charges.addAll(multiple_geometric_charges7);
                         }
                       

                    }
                    break;
                case 3 :
                    // C:\\Users\\Luke\\Dropbox\\project\\workspace2\\BlazonGrammar\\grammar\\Blazon.g:227:4: advancedCount= number_digits_or_words advanced_charge[tinctures, underLayerTinctureType, convertNumber($advancedCount.text)]
                    {
                    pushFollow(FOLLOW_number_digits_or_words_in_charges212);
                    advancedCount=number_digits_or_words();

                    state._fsp--;

                    pushFollow(FOLLOW_advanced_charge_in_charges214);
                    advanced_charge8=advanced_charge(tinctures, underLayerTinctureType, convertNumber((advancedCount!=null?input.toString(advancedCount.start,advancedCount.stop):null)));

                    state._fsp--;


                         if (advanced_charge8 != null) {
                    	     charges.addAll(advanced_charge8);
                         }
                       

                    }
                    break;

            }


            }

        }

        catch (RecognitionException re) {
                throw re;
            }
        finally {
        }
        return charges;
    }
    // $ANTLR end "charges"


    // $ANTLR start "single_geometric_charge"
